tests/ui/unsupported-modifier.stderr
error: unsupported modifier
 --> $DIR/tests/ui/unsupported-modifier.rs:4:11
  |
4 |     fn [<a:pillow>]() {}
  |           ^^^^^^^
